<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="18dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:includeFontPadding="false"
            android:text="设置用户名和密码"
            android:textColor="#36455d"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:includeFontPadding="false"
            android:text="@string/username"
            android:textColor="#36455d"
            android:textSize="12sp" />

        <com.finogeeks.utility.views.ClearableEditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLNMOPQRSTUVWXYZ_1234567890"
            android:hint="5-16字符"
            android:includeFontPadding="false"
            android:inputType="text"
            android:maxLength="16"
            android:textColorHint="#b4bcca"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="11dp"
            android:background="#eaeaea" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:includeFontPadding="false"
            android:text="用户名允许小写字母、数字、下划线，首位需字母"
            android:textColor="#b4bcca"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="26dp"
            android:includeFontPadding="false"
            android:text="@string/password"
            android:textColor="#36455d"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <com.finogeeks.utility.views.ClearableEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@+id/password_visible"
                android:background="@null"
                android:hint="6-16字符"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textColorHint="#b4bcca"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/password_visible"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="4dp"
                android:src="@drawable/sdk_login_ic_eyeoff"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="3dp"
            android:background="#eaeaea" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/selector_button_confirm"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp">

            <CheckBox
                android:id="@+id/check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fc_register_accept"
                android:textColor="#B4BCCA"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_user_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fc_user_protocol"
                android:textColor="@color/color_blue"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>