<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="18dp"
    tools:ignore="HardcodedText,RtlSymmetry,RelativeOverlap">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="34dp"
        android:src="@drawable/sdk_login_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginStart="8dp"
        android:layout_marginTop="27dp"
        android:includeFontPadding="false"
        android:text="欢迎登录"
        android:textColor="#36455d"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginStart="8dp"
        android:layout_marginTop="038dp"
        android:includeFontPadding="false"
        android:text="@string/username"
        android:textColor="#36455d"
        android:textSize="12sp" />

    <com.finogeeks.utility.views.ClearableEditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_name"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@null"
        android:hint="请输入用户名/手机号"
        android:includeFontPadding="false"
        android:inputType="text"
        android:maxLength="50"
        android:textColorHint="#b4bcca"
        android:textSize="16sp" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/login_username"
        android:layout_marginTop="11dp"
        android:background="#eaeaea" />

    <TextView
        android:id="@+id/title_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        android:includeFontPadding="false"
        android:text="@string/password"
        android:textColor="#36455d"
        android:textSize="12sp" />

    <RelativeLayout
        android:id="@+id/password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_password"
        android:layout_marginTop="3dp">

        <com.finogeeks.utility.views.ClearableEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/password_visible"
            android:background="@null"
            android:hint="请输入密码"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:textColorHint="#b4bcca"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/password_visible"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="4dp"
            android:src="@drawable/sdk_login_ic_eyeoff"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/password_container"
        android:layout_marginTop="3dp"
        android:background="#eaeaea" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:layout_marginTop="16dp"
        android:background="@drawable/selector_button_confirm"
        android:enabled="false"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_login"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:includeFontPadding="false"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="2dp"
        android:paddingBottom="4dp"
        android:text="@string/forget_password"
        android:textColor="@color/selector_text"
        android:textSize="14sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/phone_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_login"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="19dp"
        android:includeFontPadding="false"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/phone_rapid_register"
        android:textColor="@color/selector_text"
        android:textSize="14sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/iv_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="26dp"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:paddingEnd="2dp"
        android:paddingBottom="8dp"
        android:text="@string/setting"
        android:textColor="#666666"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/csrc_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:layout_marginEnd="11dp"
            android:background="#dddddd" />

        <TextView
            android:id="@+id/login_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="其他方式登录"
            android:textSize="14sp" />

        <View
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:layout_marginStart="11dp"
            android:background="#dddddd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/csrc_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="59dp"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/sdk_login_csrclogo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="行业通讯录登录"
            android:textColor="@color/color_666666"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>
